# rushell

./: Cargo.toml  LICENSE  README.md  build.rs
src/: calc.pest  completer.rs  completion.rs  eval.rs  expand.rs  git.rs  glob.pest  glob.rs  input.rs  input_parser.rs  macros.rs  main.rs  parse_expression.rs  parser.rs  path.rs  pattern.rs  process.rs  program.rs  prompt.rs  script_test.rs  shell.pest  shell.rs  syntaxer.rs  theme.rs  utils.rs  variable.rs
src/builtins/: alias.pest  alias.rs  cd.rs  complete.rs  eval.rs  export.rs  fg.rs  history.rs  mod.rs  popd.rs  pushd.rs  read.rs  set.rs  source.rs  unset.rs  wait.rs
src/program/: ast.rs  lexer.rs  parser.lalrpop  parser.lalrpop.back
