[package]
name = "rushell"
version = "0.2.0"
description = "`rushell` is a POSIX compatible shell written by Rust language for Linux and MacOS."
authors = ["Jeff Kim <hiking90@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hiking90/rushell"
keywords = ["shell", "posix"]
exclude = ["test", "backup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
ansi_term = "0.11"
# linefeed = { package="rushell_deps_linefeed", path = "../linefeed", version = "0.6.0"}
linefeed = { package="rushell_deps_linefeed", version = "0.6.0", git = "https://github.com/hiking90/rushell_deps_linefeed" }
dirs = "2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4"
structopt = "0"
phf = { version = "0", features = ["macros"] }
lazy_static = "1"
whoami = "0"
chrono = "0.4"
# pom = { path = "../pom", version = "3"}
pom = { version = "3", git = "https://github.com/hiking90/pom" }
err-derive = "0"
signal-hook = "0.3"

[dependencies.regex]
version = "1"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]